# ai-workflows

./: .gitignore  CLAUDE.md  README.md  requirements.txt  stocks.yml
.github/workflows/: _site-runner.yml  amefuri.yml  chanceit.yml  chobirich.yml  ci.yml  dreammail.yml  fruitmail.yml  fruitmail_lottery.yml  gendama.yml  getmoney.yml  hapitas.yml  moppy-clicker-ci.yml  moppy-clicker.yml  moppy.yml  pending-verify.yml  point_sites-ci.yml  pointincome.yml  pointtown.yml  stock-analysis.yml  sugutama.yml  tech-catchup.yml  todo.yml  warau.yml  weekly-review.yml
.playwright-mcp/: page-2026-05-10T13-42-28-666Z.yml
data/: investment_rules.json
docs/: DESIGN.md  REVIEW.md
moppy_clicker/: DESIGN.md  pyproject.toml
moppy_clicker/moppy_clicker/: __init__.py  clicker.py  config.py  cookie_store.py  discover.py  gmail_client.py  main.py  models.py  notifier.py  outcome_tracker.py  state_store.py
moppy_clicker/tests/: test_balance.py  test_config.py  test_cookie_store.py  test_discover.py  test_notifier.py  test_outcome_tracker.py  test_parser.py  test_redaction.py  test_state_store.py
moppy_clicker/tests/fixtures/: sample_5coin_recommend.txt
point_sites/: AUTOMATION_MAP.md  CLAUDE.md  DESIGN.md  HANDOFF.md  pyproject.toml
point_sites/point_sites/: __init__.py  balance.py  clicker.py  config.py  main.py  moppy_parser.py  notifier.py
point_sites/point_sites/adapters/: __init__.py
point_sites/point_sites/adapters/amefuri/: __init__.py
point_sites/point_sites/adapters/chanceit/: __init__.py
point_sites/point_sites/adapters/chobirich/: __init__.py  parser.py
point_sites/point_sites/adapters/dreammail/: __init__.py
point_sites/point_sites/adapters/fruitmail/: __init__.py  parser.py
point_sites/point_sites/adapters/fruitmail_lottery/: __init__.py
point_sites/point_sites/adapters/gendama/: __init__.py  parser.py
point_sites/point_sites/adapters/getmoney/: __init__.py  parser.py
point_sites/point_sites/adapters/hapitas/: __init__.py  parser.py
point_sites/point_sites/adapters/moppy/: __init__.py  parser.py
point_sites/point_sites/adapters/pointincome/: __init__.py  parser.py
point_sites/point_sites/adapters/pointtown/: __init__.py  parser.py
point_sites/point_sites/adapters/sugutama/: __init__.py  parser.py
point_sites/point_sites/adapters/warau/: __init__.py  parser.py
point_sites/point_sites/common/: __init__.py  adapter.py  balance.py  browser.py  browser_action.py  clicker.py  cookie_store.py  discover.py  gmail_client.py  models.py  notifier.py  outcome_tracker.py  password_login.py  redaction.py  state_store.py  wizard.py
point_sites/point_sites/common/sources/: __init__.py  base.py  endpoint_poll.py  gmail.py  onsite_inbox.py
point_sites/scripts/: get_refresh_token.py
point_sites/tests/: test_balance.py  test_browser.py  test_browser_action.py  test_config.py  test_cookie_store.py  test_discover.py  test_fruitmail_lottery_skip_regex.py  test_notifier.py  test_outcome_tracker.py  test_parser.py  test_pointincome_parser.py  test_pointtown_parser.py  test_redaction.py  test_state_store.py
point_sites/tests/fixtures/: sample_1coin_ahamo.txt
scripts/: pending_verify.py
src/: ai_analyzer.py  data_fetcher.py  main.py  market_context.py  news_fetcher.py  performance_tracker.py  sector_analysis.py  slack_notifier.py  stock_screener.py  strategy_learner.py  technical_indicators.py
stock_analyzer/: ai_analyzer.py  config_loader.py  jpx400_components.py  main.py  news_fetcher.py  nikkei225_components.py  performance_tracker.py  pyproject.toml  slack_notifier.py  stock_screener.py  strategy_learner.py
stock_analyzer/config/: stocks.yml
stock_analyzer/data/: investment_rules.json  predictions_history.json  proposed_screening_weights.json  screening_weights.json  strategy_change_log.json  strategy_change_proposals.json  strategy_notes.json
stock_analyzer/stock_analyzer/: ai_analyzer.py  backtest.py  calendar_context.py  config_loader.py  critic.py  data_fetcher.py  earnings_calendar.py  factor_model.py  jpx400_components.py  macro_sensitivity.py  main.py  news_classifier.py  news_fetcher.py  performance_tracker.py  portfolio_risk.py  position_sizing.py  prompt_lint.py  risk_reward.py  sector_analysis.py  signal_tags.py  slack_notifier.py  stock_screener.py  strategy_governor.py  strategy_learner.py  tdnet_fetcher.py  technical_indicators.py  trailing_stop.py  universe_refresh.py
stock_analyzer/tests/: test_backtest.py  test_calendar_context.py  test_critic.py  test_earnings_calendar.py  test_factor_model.py  test_macro_sensitivity.py  test_market_context.py  test_news_classifier.py  test_performance_tracker.py  test_portfolio_risk.py  test_position_sizing.py  test_prompt_lint.py  test_risk_reward.py  test_sector_analysis.py  test_signal_efficacy.py  test_signal_tags.py  test_slack_notifier_pnl.py  test_strategy_governor.py  test_strategy_learner.py  test_tdnet_fetcher.py  test_technical_indicators.py  test_trailing_stop.py  test_universe_refresh.py
tech_catchup/: main.py  pyproject.toml  sources.py
tech_catchup/tech_catchup/: main.py  sources.py
todo/: pyproject.toml  todos.md
todo/todo/: main.py
verify/: canary.yml
verify/meta/: 2026-05-15-auto-fix-wiring-test.yml
verify/point_sites/: 2026-05-16-pointtown-cookie.yml  2026-05-16-slack-delta-points.yml  2026-05-18-moppy-degradation.yml  2026-05-18-new-sites-mail.yml  2026-05-18-pointincome-extract-label.yml  2026-05-23-fruitmail-bingo-credit.yml  2026-05-23-fruitmail-login-bonus-credit.yml  2026-05-23-fruitmail-slot-credit.yml  2026-05-25-gmail-api-click-pipeline.yml  2026-05-30-amefuri-freepoint-credit.yml  2026-05-30-getmoney-estlier-credit.yml  (+6 more)
youtube_factory/: DESIGN.md  IMPROVEMENT_PLAN.md  audio_processor.py  image_generator.py  main.py  pyproject.toml  script.py  script_validator.py  subtitle_generator.py  video_assembler.py  voice_synthesizer.py
youtube_factory/audio/: freesound.py  master.py  pixabay.py  voice.py
youtube_factory/docs/: INSTALL_FOOTPRINT.md
youtube_factory/video/: compose.py
youtube_factory/visual/: avatar.py  images.py  pexels.py  subtitles.py
(+6 files in other folders)
