[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Japanese stock short-term analysis with self-improving prediction loop"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "requests>=2.32.0",
    "beautifulsoup4>=4.13.0",
    "pandas>=2.2.0",
    "ta>=0.11.0",
    "PyYAML>=6.0.0",
    "jpholiday>=1.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-requests>=2.32.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stock_analyzer"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF001/002/003: ambiguous fullwidth chars — intentional for Japanese matching.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
