[project]
name = "tech-catchup"
version = "0.1.0"
description = "AI tech catchup: gather news from HN/GitHub/arXiv/AI company blogs and post a Claude-summarized digest to Slack"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-requests>=2.32.0",
    "types-beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tech_catchup"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF001/002/003: ambiguous fullwidth chars — intentional for Japanese matching.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
