[project]
name = "todo"
version = "0.1.0"
description = "Personal TODO list with daily Slack reminders via GitHub Actions"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["todo"]

[tool.ruff]
line-length = 100
target-version = "py312"
