[project]
name = "youtube-factory"
version = "0.1.0"
description = "Auto-generates AI tech news YouTube videos from tech_catchup data"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.8",
    "pillow>=12.0.0",
    "pydantic>=2.13.0",
    "requests>=2.32.0",
]

[tool.uv]
package = false
