[project]
name = "youtube-factory"
version = "0.1.0"
description = "Auto-generates AI tech news YouTube videos from tech_catchup data"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.8",
    "faster-whisper>=1.2.1",
    "pillow>=12.0.0",
    "pydantic>=2.13.0",
    "pyopenjtalk>=0.4.1",
    "requests>=2.32.0",
    "voicevox-core",
]

[tool.uv]
package = false

[tool.uv.sources]
voicevox-core = { url = "https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.4/voicevox_core-0.16.4-cp310-abi3-macosx_11_0_arm64.whl" }
